# Raytracer

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp
libs/glm/glm/: geometric.hpp
libs/lpng/: libpng-manual.txt  libpng.3
libs/pugixml/docs/samples/: load_stream.cpp
src/cameras/: camera_orthographic.cpp  camera_orthographic.h
src/core/: Camera.cpp  Camera.h  Scene.cpp  Scene.h  param_set.cpp  param_set.h  param_set.hpp  parser.cpp  parser.h  parser.hpp  scene_builder.cpp  scene_builder.h
src/core/background/: background.cpp  background.h  background_factory.cpp  background_factory.h  bg_enums.h
src/core/background/impl/: background_color.cpp  background_color.h  background_image.cpp  background_image.h  background_interpolated.cpp  background_interpolated.h
src/core/camera/: CameraType.h  camera.cpp  camera.h  camera_builder.cpp  camera_builder.h  camera_enums.h  camera_factory.cpp  camera_factory.h
src/core/camera/impl/: camera_orthographic.h
src/core/film/: film.cpp  film.h  film_enums.h
src/core/param_set/: Background.cpp  Background.h  param_array_item.cpp  param_array_item.hpp  param_float_item.cpp  param_float_item.hpp  param_integer_item.cpp  param_integer_item.hpp  param_item.cpp  param_item.hpp  param_item_type.hpp  param_set.cpp  param_set.hpp  param_string_item.cpp  param_string_item.hpp
src/core/parser/: parser.cpp  parser.h
src/core/scene/: scene.cpp  scene.h  scene_builder.cpp  scene_builder.h
src/exception/: param_set_invalid_conversion.cpp  param_set_invalid_conversion.hpp
